# dso

./: CMakeLists.txt
src/FullSystem/: CoarseInitializer.cpp  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  HessianBlocks.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  Output3DWrapper.h
src/OptimizationBackend/: EnergyFunctional.cpp  EnergyFunctionalStructs.h
src/util/: NumType.h
